CSS/navbar.css
html, body {
    margin: 0%;
    padding: 0%;
    width: 100%;
    background: #161616;
    cursor: none;
}

h1, h2, h3, h4, h5 {
  font-family: "Monument Extended";
}

p {
    font-family: 'Questrial', sans-serif;
}

.wrapper {
    width: 600px;
    height: 400px;
}


span {
    display: inline-block;
    font-family: "Monument Extended";
    font-weight: 300;
    color: #fff;
    font-size: 36px;
    text-transform: uppercase;
    pointer-events: none;
    transition: transform 0.1s linear;
}

.width {
    margin: 0 auto;
    width: 90%;
}
.cursor {
    pointer-events: none;
    position: fixed;
    padding: 0.4rem;
    background-color: rgba( 255, 0, 226, 0.85 );
    border-radius: 50%;
    mix-blend-mode: difference;
    transition: transform 0.3s ease;
}

.cursor:active {
    cursor: none;
}

.hover-this:hover ~ .cursor {
    transform: translate(-50%, -50%) scale(8);
}

.hero-container {
    width: 100vw;
    height: 100vh;
    background-size: cover;
    background-color: #161616;
}
.hero-container .hero-flex {
    display: flex;
    align-items: center;
    width: 100%;
    height: 100%;
    background-color: #161616;
}
.hero-flex {
    width: 50%;
    color: #fff;
}
.hero-flex h1{
    margin: 0;
    font-size: 50px;
}
.hero-img {
    width: 50%;
}
.hero-content {
      width: 50%;
      padding: 0em 2em;
}
  /*NAV CSS*/
  .nav-wrapper {
      width: 100vw;
      height: 10vh;
      top: 0;
      position: fixed;
      z-index: 3;
  }
  .main-nav {
    margin-top: 1em;   
  }
  nav {
      width: 100%;
      margin: 0 auto;
      text-align: center;
      position: absolute;
      top: 5%;
  }
  
  .hover-this {
      transition: all 0.3s ease;
  }
  .hamburger {
      position: relative;
      display: block;
      width: 35px;
      cursor: pointer;
      height: 35px;
      appearance: none;
      background: none;
      outline: none;
      border: none;
      top: 10px;
      left: 90%;
      z-index: 3;

}


.hamburger .bar, .hamburger:after, .hamburger:before {
      content: '';
      display: block;
      width: 100%;
      height: 5px;
      background-color: #fff;
      margin: 6px 0px;
      transition: 0.4s;
}

.hamburger.is-active:before {
      transform: rotate(-45deg) translate(-8px, 6px);
}

.hamburger.is-active:after {
      transform: rotate(45deg) translate(-9px, -8px);
}

.hamburger.is-active .bar{
      opacity: 0;
} 

.mobile-nav {
      display: block;
      position: fixed;
      top: 0;
      left: 100%;
      width: 100%;
      min-height: 100%;
      z-index: 2;
      background-color: rgb(241, 241, 241);
      padding-top: 120px;
      transition: 0.4s;
}
.mobile-nav.is-active {
      left: 0%;
}
.mobile-nav a {
      display: block;
      text-align: center;
      margin: 0 auto 16px;
      width: 100%;
      max-width: 200px;
      width: fit-content;
      padding: 12px 16px;
      background-color: #fff;
      color: #161616;
      text-decoration: none;      
}

.mobile-nav a:hover {
      background-color: #fff;
}
.mobile-nav span {
    color: #161616;
}

@media (min-width: 901px) {
      .mobile-nav {
            display: none;
      }

      .hamburger {
            display: none;
      }
}

@media(min-width: 900px) {
    nav {
          display: flex;
          justify-content: space-around;
    }
}

@media(max-width: 900px) {
    nav {
          top: 30%;
    }

    .hover-this {
          width: 100%;
          padding: 20px 0;
          display: none;
    }
    .cursor {
        display: none;
    }
}
@media(max-width: 425px) {
    .cursor {
        display: none;
    }
}  

